# simpleCpp

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  README.md  main.cpp  simpleLib.cpp
